# CardanoPlusPlus

./: LICENSE  Makefile.in  README.md  config.h  config.hin  config.status  configure  configure.ac  libtool
Addresses/: addresses.cpp  addresses.hpp
Addresses/Test/: Makefile  addresses_test.cpp
Bip32-ed25519/: bip32_ed25519.cpp  bip32_ed25519.hpp
Bip32-ed25519/Test/: Makefile  bip32_test  bip32_test.cpp
Bip39/: bip39.cpp  bip39.hpp  diccionary.hpp
Bip39/Test/: Makefile  mnemotic_test.cpp
Bip44-ed25519/: bip44_ed25519.cpp  bip44_ed25519.hpp
Bip44-ed25519/Test/: Makefile  bip44_test.cpp
Hash/: bech32.cpp  bech32.hpp  pbkdf2_hmac512_libsodium.cpp  pbkdf2_hmac512_libsodium.hpp
Transactions/: auxiliary_data.cpp  auxiliary_data.hpp  certificates.cpp  certificates.hpp  metadata.cpp  metadata.hpp  multiassets.cpp  multiassets.hpp  native_scripts.cpp  native_scripts.hpp  transaction.cpp  transaction.hpp  transaction_body.cpp  transaction_body.hpp  transaction_witness.cpp  transaction_witness.hpp  transactioninput.cpp  transactioninput.hpp  transactionoutput.cpp  transactionoutput.hpp  withdrawal.cpp  withdrawal.hpp
Utils/: cbor_lite.cpp  cbor_lite.hpp  plutusjsonschema.cpp  plutusjsonschema.hpp  txutils.cpp  txutils.hpp
include/: Makefile.am  Makefile.in  cardanoplusplus.h
include/cardanoplusplus/addresses/: addresses.hpp
include/cardanoplusplus/bip32_ed25519/: bip32_ed25519.hpp
include/cardanoplusplus/bip39/: bip39.hpp  diccionary.hpp
include/cardanoplusplus/bip44_ed25519/: bip44_ed25519.hpp
include/cardanoplusplus/hash/: bech32.hpp
include/cardanoplusplus/transaction/: auxiliary_data.hpp  certificates.hpp  metadata.hpp  multiassets.hpp  native_scripts.hpp  transaction.hpp  transaction_body.hpp  transaction_witness.hpp  transactioninput.hpp  transactionoutput.hpp  withdrawal.hpp
include/cardanoplusplus/utils/: cenum.hpp  cmacros.hpp  plutusjsonschema.hpp  txutils.hpp
src/: Makefile.am  Makefile.in
src/addresses/: addresses.cpp
src/addresses/.deps/: addresses.Plo
src/bip32_ed25519/: bip32_ed25519.cpp
src/bip32_ed25519/.deps/: bip32_ed25519.Plo
src/bip39/: bip39.cpp
src/bip39/.deps/: bip39.Plo
src/bip44_ed25519/: bip44_ed25519.cpp
src/bip44_ed25519/.deps/: bip44_ed25519.Plo
src/hash/: bech32.cpp  pbkdf2_hmac512_libsodium.cpp
src/hash/.deps/: bech32.Plo  pbkdf2_hmac512_libsodium.Plo
src/transaction/: auxiliary_data.cpp  certificates.cpp  metadata.cpp  multiassets.cpp  native_scripts.cpp  transaction.cpp  transaction_body.cpp  transaction_witness.cpp  transactioninput.cpp  transactionoutput.cpp  withdrawal.cpp
src/transaction/.deps/: auxiliary_data.Plo  certificates.Plo  metadata.Plo  multiassets.Plo  native_scripts.Plo  transaction.Plo  transaction_body.Plo  transaction_witness.Plo  transactioninput.Plo  transactionoutput.Plo  withdrawal.Plo
src/utils/: cbor_lite.cpp  plutusjsonschema.cpp  txutils.cpp
src/utils/.deps/: cbor_lite.Plo  plutusjsonschema.Plo  txutils.Plo
