nobase_include_HEADERS = \
cardanoplusplus.h \
cardanoplusplus/addresses/addresses.hpp \
cardanoplusplus/hash/bech32.hpp \
cardanoplusplus/bip39/bip39.hpp \
cardanoplusplus/bip39/diccionary.hpp \
cardanoplusplus/bip32_ed25519/bip32_ed25519.hpp \
cardanoplusplus/bip44_ed25519/bip44_ed25519.hpp \
cardanoplusplus/utils/cbor_lite.hpp \
cardanoplusplus/utils/plutusjsonschema.hpp \
cardanoplusplus/transaction/transaction_witness.hpp \
cardanoplusplus/transaction/auxiliary_data.hpp \
cardanoplusplus/transaction/certificates.hpp \
cardanoplusplus/transaction/metadata.hpp \
cardanoplusplus/transaction/transaction.hpp \
cardanoplusplus/transaction/multiassets.hpp \
cardanoplusplus/transaction/native_scripts.hpp
